--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp-uglify": "^1.2.0"
   },
   "devDependencies": {
+    "mongoose": "^4.0.3",
     "request": "^2.55.0"
   },
   "repository": {
