--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "bluebird": "^2.9.27",
     "express": "^4.12.3",
     "gulp": "^3.8.11",
     "gulp-bower": "0.0.10",
