--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "underscore": "^1.8.3"
   },
   "devDependencies": {
+    "gulp-minify-css": "^1.1.3",
     "mongoose": "^4.0.3",
     "request": "^2.55.0"
   },
