--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
   ],
   "dependencies": {
     "react": "~0.13.3",
-    "bootstrap": "~3.3.4"
+    "bootstrap": "~3.3.4",
+    "bootstrap-plugin": "git@github.com:TrollPay/bootstrap-plugin.git"
   }
 }
