--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
     "gulp-nodemon": "^2.0.3",
     "gulp-plumber": "^1.0.0",
     "gulp-uglify": "^1.2.0",
-    "underscore": "^1.8.3"
-  },
-  "devDependencies": {
+    "underscore": "^1.8.3",
     "gulp-minify-css": "^1.1.3",
     "mongoose": "^4.0.3",
     "request": "^2.55.0"
