--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "gulp": "^3.8.11",
     "gulp-bower": "0.0.10",
     "gulp-concat": "^2.5.2",
+    "gulp-foreman": "^0.1.1",
+    "gulp-minify-css": "^1.1.3",
     "gulp-nodemon": "^2.0.3",
     "gulp-plumber": "^1.0.0",
     "gulp-uglify": "^1.2.0",
-    "underscore": "^1.8.3",
-    "gulp-minify-css": "^1.1.3",
     "mongoose": "^4.0.3",
-    "request": "^2.55.0"
+    "request": "^2.55.0",
+    "underscore": "^1.8.3"
   },
   "repository": {
     "type": "git",
