--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "homepage": "https://github.com/Trollpay/TrollPay",
   "devDependencies": {
-    "ejs": "^2.3.1"
+    "ejs": "^2.3.1",
+    "gulp-react": "^3.0.1"
   }
 }
