--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
     "react": "~0.13.3",
     "bootstrap": "~3.3.4",
     "bootstrap-plugin": "*",
-    "react-router": "~0.13.3"
+    "react-router": "~0.13.3",
+    "normalize.css": "~3.0.3"
   }
 }
