--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp-minify-css": "^1.1.3",
     "gulp-nodemon": "^2.0.3",
     "gulp-plumber": "^1.0.0",
+    "gulp-react": "^3.0.1",
     "gulp-uglify": "^1.2.0",
     "mongoose": "^4.0.3",
     "react": "^0.13.3",
