--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "bootstrap": "~3.3.4",
     "bootstrap-plugin": "*",
     "react-router": "~0.13.3",
-    "normalize.css": "~3.0.3"
+    "normalize.css": "~3.0.3",
+    "flux": "~2.0.2"
   }
 }
