--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "react-router": "~0.13.3",
     "normalize.css": "~3.0.3",
     "flux": "~2.0.2",
-    "microevent": "~1.1.1"
+    "microevent": "~1.1.1",
+    "url": "*"
   }
 }
