--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {},
   "dependencies": {
     "bluebird": "^2.9.27",
+    "body-parser": "^1.13.1",
     "bower": "^1.4.1",
     "express": "^4.12.3",
     "gulp": "^3.8.11",
