--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp-react": "^3.0.1",
     "gulp-uglify": "^1.2.0",
     "mongoose": "^4.0.3",
+    "needle": "^0.9.2",
     "react": "^0.13.3",
     "request": "^2.55.0",
     "underscore": "^1.8.3"
