--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-uglify": "^1.2.0",
     "mongoose": "^4.0.3",
     "needle": "^0.9.2",
+    "nodemailer": "^1.4.0",
     "react": "^0.13.3",
     "request": "^2.55.0",
     "underscore": "^1.8.3"
