--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
 API_SECRET=SOME_VALUE
 APP_ID=SOME_VALUE
+CANCEL=SOME_VALUE
+TROLLTOLL=SOME_VALUE
+UNTROLL=SOME_VALUE
+CLAIM=SOME_VALUE
+SENDGRID_USERNAME=SOME_VALUE
+SENDGRID_PASSWORD=SOME_VALUE
 MONGOLAB_URI=SOME_VALUE
