Modularize home, confirm, signup, and other front end components

--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "normalize.css": "~3.0.3",
     "flux": "~2.0.2",
     "microevent": "~1.1.1",
-    "url": "*"
+    "url": "*",
+    "jquery": "~2.1.4"
   }
 }
