--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bluebird": "^2.9.27",
     "body-parser": "^1.13.1",
     "bower": "^1.4.1",
+    "cron": "^1.0.9",
     "express": "^4.12.3",
     "gulp": "^3.8.11",
     "gulp-bower": "0.0.10",
